1.0
[+] Stack trace with parameters.
[*] Cleaner layout.