@@ -2,7 +2,7 @@
 ============================
 
 Немного улучшенный обработчик ошибок. На данный момент умеет показывать параметры
-к вызовам стека и несколько более опрятен.
+к вызовам стека, различать статические и динамические вызовы и несколько более опрятен.
 
 Настройка
 ---------
