@@ -1,3 +1,4 @@
 1.0
+[+] Static/dynamic calls in stack trace.
 [+] Stack trace with parameters.
 [*] Cleaner layout.
